--- a/Tasks/pom.xml
+++ b/Tasks/pom.xml
@@ -5,7 +5,7 @@
   <groupId>Csd</groupId>
   <artifactId>Tasks</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
 
   <name>Tasks</name>
   <url>http://maven.apache.org</url>
